<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"

    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/admin_nav_home"
            android:icon="@drawable/baseline_add_home_24"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_schedules"
            android:icon="@drawable/schedules_icon"
            android:title="@string/menu_schedules" />
        <item
            android:id="@+id/nav_buyitems"
            android:icon="@drawable/purchase"
            android:title="@string/menu_buy_items" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/cart"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_trackorders"
            android:icon="@drawable/track_orders_icon"
            android:title="@string/menu_track_orders" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/user"
            android:title="@string/menu_user" />

    </group>
</menu>